# ICNSE

./: CMakeLists.txt  README.md  main.cpp  main.cpp.mt
MacFiles/: batch.sh  icnse.mac  sarkar.mac  shielding.mac  vis.mac  vis_icnse.mac
Plots/: Plot_all.cpp
coreTest/: TestBoolean.cpp  TestG4Units.cpp  TestPtr.cpp
inc/: ActionInitialization.h  Analysis.h  Data.h  DetectorConstruction.h  Geometry.h  Helpers.h  Materials.h  PrimaryGeneratorAction.h  RadioactiveSource.h  Run.h  RunAction.h  SD.h  TrackingAction.h
src/: ActionInitialization.cpp  Analysis.cpp  Box.cpp  BoxShell.cpp  Data.cpp  DetectorConstruction.cpp  Geometry.cpp  Helpers.cpp  Materials.cpp  PrimaryGeneratorAction.cpp  RadioactiveSource.cpp  Run.cpp  RunAction.cpp  SD.cpp  TrackingAction.cpp
